[gd_scene load_steps=13 format=3 uid="uid://dy1032o3dyusa"]

[ext_resource type="Script" uid="uid://dh1hf48w2a02t" path="res://scripts/chest.gd" id="1_binio"]
[ext_resource type="Texture2D" uid="uid://bg4nkk5nuqmx4" path="res://addons/objects/chest.png" id="1_q10cc"]
[ext_resource type="PackedScene" uid="uid://b3p1tukliho5n" path="res://UI/interect_ui.tscn" id="2_o45nq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7u51"]

[sub_resource type="AtlasTexture" id="AtlasTexture_85drk"]
atlas = ExtResource("1_q10cc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tl2c"]
atlas = ExtResource("1_q10cc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7hbn"]
atlas = ExtResource("1_q10cc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r1j0"]
atlas = ExtResource("1_q10cc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7oq1f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85drk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tl2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7hbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r1j0")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6nl28"]

[sub_resource type="Animation" id="Animation_esi2b"]
resource_name = "open_chest"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"open", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_58pnd"]
_data = {
&"open_chest": SubResource("Animation_esi2b")
}

[node name="Chest" type="StaticBody2D"]
script = ExtResource("1_binio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q7u51")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7oq1f")
animation = &"open"

[node name="InterectUi" parent="." instance=ExtResource("2_o45nq")]
visible = false
offset_top = -16.0
offset_bottom = -16.0
scale = Vector2(0.3, 0.3)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_6nl28")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 4
libraries = {
&"": SubResource("AnimationLibrary_58pnd")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
